[gd_scene load_steps=20 format=2]

[ext_resource path="res://UI/InventoryBar.gd" type="Script" id=1]
[ext_resource path="res://UI/Slot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enemies/Bat.png" type="Texture" id=3]
[ext_resource path="res://UI/UI.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 3
light_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Theme" id=2]

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.00392157, 0.101961, 0.231373, 0.541176 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id=9]
Panel/styles/panel = SubResource( 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="Theme" id=7]

[sub_resource type="DynamicFontData" id=16]
font_path = "res://Assets/Fonts/yoster.ttf"

[sub_resource type="DynamicFont" id=17]
size = 8
font_data = SubResource( 16 )

[sub_resource type="Theme" id=18]
default_font = SubResource( 17 )
RichTextLabel/colors/default_color = Color( 0.94902, 0.45098, 0.45098, 1 )

[node name="UI" type="Control"]
margin_left = -1.0
margin_right = -1.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( -355, -22 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
material = SubResource( 1 )
anchor_right = 1.389
anchor_bottom = 1.347
margin_left = -120.0
margin_top = 56.0
margin_right = 115.0
margin_bottom = 78.653
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryBar" type="GridContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_right = 5.0
margin_bottom = 2.0
theme = SubResource( 3 )
columns = 9
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" parent="Panel/InventoryBar" instance=ExtResource( 2 )]

[node name="Slot2" parent="Panel/InventoryBar" instance=ExtResource( 2 )]
margin_left = 26.0
margin_right = 48.0

[node name="Slot3" parent="Panel/InventoryBar" instance=ExtResource( 2 )]
margin_left = 52.0
margin_right = 74.0

[node name="Slot4" parent="Panel/InventoryBar" instance=ExtResource( 2 )]
margin_left = 78.0
margin_right = 100.0

[node name="Slot5" parent="Panel/InventoryBar" instance=ExtResource( 2 )]
margin_left = 104.0
margin_right = 126.0

[node name="Slot6" parent="Panel/InventoryBar" instance=ExtResource( 2 )]
margin_left = 130.0
margin_right = 152.0

[node name="Slot7" parent="Panel/InventoryBar" instance=ExtResource( 2 )]
margin_left = 156.0
margin_right = 178.0

[node name="Slot8" parent="Panel/InventoryBar" instance=ExtResource( 2 )]
margin_left = 182.0
margin_right = 204.0

[node name="Slot9" parent="Panel/InventoryBar" instance=ExtResource( 2 )]
margin_left = 208.0
margin_right = 230.0

[node name="StoryMode" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArcadeMode" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="MarginContainer" parent="ArcadeMode"]
margin_left = 66.0
margin_top = -87.0
margin_right = 154.0
margin_bottom = -42.0
rect_scale = Vector2( 1.03383, 0.724566 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ArcadeMode/Container"]
margin_right = 88.0
margin_bottom = 45.0
theme = SubResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ArcadeMode/Container/Panel"]
position = Vector2( 75.4477, 13.8014 )
frames = SubResource( 15 )
frame = 1
playing = true
flip_h = true

[node name="VBoxContainer" type="VBoxContainer" parent="ArcadeMode/Container/Panel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 83.0
margin_bottom = 40.0
theme = SubResource( 7 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentRound" type="RichTextLabel" parent="ArcadeMode/Container/Panel/VBoxContainer"]
margin_top = 5.0
margin_right = 78.0
margin_bottom = 15.0
theme = SubResource( 18 )
meta_underlined = false
text = "Round:"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemiesLeft" type="RichTextLabel" parent="ArcadeMode/Container/Panel/VBoxContainer"]
margin_top = 19.0
margin_right = 78.0
margin_bottom = 29.0
theme = SubResource( 18 )
meta_underlined = false
text = "Enemies Left:"
fit_content_height = true

[node name="Camera2D" type="Camera2D" parent="."]
